# system-monitor

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  format.py
broker/cpp/: CMakeLists.txt  main.cpp
broker/go/: Makefile  gen_proto.sh  go.mod  go.sum  main.go  monitor.conf
broker/go/server/: pubsub.go  server.go  setget.go
client/: CMakeLists.txt
client/collector/: CMakeLists.txt
client/collector/src/: cpu_load_monitor.cpp  cpu_softirq_monitor.cpp  cpu_stat_monitor.cpp  cpu_stat_monitor.h  mem_monitor.h
client/consumer/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  monitor_inter.cpp  monitor_inter.h
client/consumer/components/: highlight_delegate.h
client/consumer/factories/: cpumonitor_factory.h  memmonitor_factory.cpp  memmonitor_factory.h  monitor_factory.h  netmonitor_factory.cpp  softirqmonitor_factory.h
client/consumer/interfaces/: monitor_plugin_interface.h
client/consumer/misc/: monitor-ui@.service
client/consumer/models/: cpu_softirq_model.h  cpu_stat_model.h  monitor_model.cpp  net_model.h
client/consumer/plugins/: CMakeLists.txt  pluginmanager.cpp  pluginmanager.h
client/consumer/plugins/monitor/: CMakeLists.txt  monitor_widget.h
client/consumer/plugins/monitor/cpu-monitor/: CMakeLists.txt  cpu-monitor.json  cpumonitor_plugin.cpp  cpumonitor_plugin.h  cpumonitor_widget.cpp  cpumonitor_widget.h
client/consumer/plugins/monitor/memory-monitor/: CMakeLists.txt  memmonitor_plugin.cpp  memmonitor_plugin.h  memmonitor_widget.cpp  memmonitor_widget.h  memory-monitor.json
client/consumer/plugins/monitor/network-monitor/: CMakeLists.txt  netmonitor_plugin.cpp  netmonitor_plugin.h  netmonitor_widget.cpp  netmonitor_widget.h  network-monitor.json
client/consumer/plugins/monitor/softirq-monitor/: CMakeLists.txt  softirq-monitor.json  softirqmonitor_plugin.cpp  softirqmonitor_plugin.h  softirqmonitor_widget.cpp  softirqmonitor_widget.h
client/consumer/widgets/: cpumonitor_widget.h  memmonitor_widget.cpp  monitor_widget.h  softirqmonitor_widget.cpp
client/frontend/: mainwindow.cpp  monitor_inter.cpp
client/frontend/components/: highlight_delegate.cpp  tablebox.cpp  tablebox.h
client/frontend/factories/: cpumonitor_factory.cpp  netmonitor_factory.h  softirqmonitor_factory.cpp
client/frontend/misc/: monitor-ui.desktop  monitor-ui@.service
client/frontend/models/: cpu_load_model.cpp  cpu_load_model.h  cpu_softirq_model.cpp  cpu_stat_model.cpp  mem_model.cpp  mem_model.h  monitor_model.h  net_model.cpp
client/frontend/widgets/: cpumonitor_widget.cpp  memmonitor_widget.h  monitor_widget.cpp  netmonitor_widget.cpp  netmonitor_widget.h  softirqmonitor_widget.h
client/publisher/: CMakeLists.txt  main.cpp
client/publisher/monitor/: cpu_softirq_monitor.h  mem_monitor.cpp  monitor_inter.h  net_monitor.h
client/publisher/monitor/factory/: monitor_factory.h
client/publisher/src/: cpu_load_monitor.cpp  cpu_load_monitor.h  cpu_softirq_monitor.cpp  cpu_softirq_monitor.h  cpu_stat_monitor.cpp  cpu_stat_monitor.h  mem_monitor.cpp  mem_monitor.h  monitor_inter.h  net_monitor.cpp  net_monitor.h
client/publisher/utils/: factory.h  utils.h
docker/images/: base.dockerfile  monitor.dockerfile
docker/images/install/glog/: install_glog.sh
docker/scripts/: monitor_docker_into.sh  monitor_docker_run.sh
grpc/: CMakeLists.txt
grpc/client/: CMakeLists.txt  rpc_client.cpp  rpc_client.h
grpc/server/: CMakeLists.txt  rpc_server.cpp  rpc_server.h  subscriber.h
proto/: CMakeLists.txt  cpu_load.proto  cpu_softirq.proto  cpu_stat.proto  heart_beat.proto  mem_info.proto  monitor_info.proto  monitor_service.proto  net_info.proto
server/cpp/: CMakeLists.txt
server/go/: go.mod  main.go
